--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -129,12 +129,11 @@ https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/
 Software design patterns are a grouping of a description of target project behaviour, with a suggested community solution of code structure often accompanied with worked examples (see Chapter 2). While existing research explores the use of game design patterns in educational settings, for instance to aid the transfer of science simulation concepts to other contexts [@repenning_scalable_2015; @basawapatna_using_2010] or as a foundation for co-design work [@eriksson_using_2019], there is limited work addressing their role in overcoming challenges faced by emerging communities of game creators using text coding. In the previous chapter, I outlined the evolution of tool use, emphasising emerging tensions in activity. The importance of gameplay design patterns (GDPs) emerged from participant input in P1 and were then integrated by myself into various forms of scaffolding within and graded step of practice including: quick-start activities, instructional tutorials, and code snippet examples. This chapter shifts focus to the perspectives of participants, using recorded data to interpret their varied uses and adaptations of GDP use. In doing so, it addresses the research question: How does CHAT theory help us understand how game design patterns can be used in an evolving community of novice game makers?  I describe the use of GDPs as diverse mediational strategies to overcome some of the tensions explored in the previous chapter, not only addressing the use of facilitator-provided resources but also as part of emerging community practices and interpersonal repertoires.
 
 
-INSERT SUMMARY TABLE FROM HERE -
-https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
+INSERT SUMMARY TABLE HERE (From start of Vignettes document)
 
-Table 6.1: Varied GDP use and summary of supporting evidence
+Table 6.1: Summary of varied GDP use within the activity of this research
 
-The above table summarises the principal different uses of GDPs in the data analysed. The right column lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis. In this table and the structure of this chapter, I employ Rogoff's three planes of analysis [@rogoff_observing_1995], as introduced in Chapter Four. This chapter’s sections examine how gameplay design patterns are utilised broadly by parents, children and facilitators, each through the lens of a respective analytical plane. Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections. An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x. A discussion section explores the implications of these findings in relation to existing research and theoretical concepts.
+The above table summarises the principal different uses of GDPs in the data analysed.  In this table and the structure of this chapter, I employ Rogoff's three planes of analysis [@rogoff_observing_1995], as introduced in Chapter Four. This chapter’s sections examine how gameplay design patterns are utilised broadly by parents, children and facilitators, each through the lens of a respective analytical plane. Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections. An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x. A discussion section explores the implications of these findings in relation to existing research and theoretical concepts.
 
 <!--
 _extending the use of GDPs beyond the initial use to diverse mediational uses and component parts of emerging making repertoires & Identifying GDPs as a germ cell/ unit of analysis_ -->
@@ -648,7 +647,11 @@ Another pair Clive and Pearl, the grandparents of Toby, included a narrative mes
 
 In addition to issues of aesthetics, home knowledge of game mechanics and dynamics (the M and D of the MDA framework) also contributed to emerging cultural repertoires.
 
-As explored in the previous section, Vignette 4 gives several examples of participant feedback on the dynamics of Madiha's game in the level of the challenge experienced by players. Peers shared their experience of what makes a good game to bear in the feedback they shared. Turning to the area game mechanics, In see V1.b Bertie(c) comments on Toby(c)'s game, which has a dominant game experience of timed jumping: *"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"*. Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns. Additionally, the guidance of Dan(p) for Toby(c) explored above in Vignette 7, saw the parent explicitly drawing out the child's home knowledge of games to enable an exploration of a different set of game mechanics. Thus, the tacit knowledge of GDPs of children and adults as game players serves them in knowledge-brokers roles in the process of feeding back and ideation [@wenger_communities_1998].
+
+As explored in the previous section, Vignette 4 gives several examples of participant feedback on the dynamics of Madiha's game in the level of the challenge experienced by players.
+
+ADD TRANSCRIPT EXTRACT?
+Peers shared their experience of what makes a good game to bear in the feedback they shared. Turning to the area game mechanics, In see V1.b Bertie(c) comments on Toby(c)'s game, which has a dominant game experience of timed jumping: *"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"*. Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns. Additionally, the guidance of Dan(p) for Toby(c) explored above in Vignette 7, saw the parent explicitly drawing out the child's home knowledge of games to enable an exploration of a different set of game mechanics. Thus, the tacit knowledge of GDPs of children and adults as game players serves them in knowledge-brokers roles in the process of feeding back and ideation [@wenger_communities_1998].
 
 The previous examples have outlined how participants used GDPs in  incorporating graphical, audio assets, and narrative elements into their games.  In Chapter 5 and Appendix.tech.gameframework I outlined the use of the MDA (mechanics, dynamics, and aesthetics) framework to theme the presentation of GDPs. I propose that this subdivision of GDPs scaffolds participants to elect to follow varied learning pathways based on their home interests in a way which  align with characteristics of the inclusive pedagogy universal design for learning (UDL) [@sanger_inclusive_2020]. Specifically, providing resources which allow exploration of  providing multiple means of engagement with the learning process
 
@@ -712,9 +715,19 @@ The implementation of popular or novel GDPs by participant pairs or individuals 
 <!-- **New GDPs emerged from existing patterns through peer activity during playtesting** -->
 <!-- DEVELOP -->
 
+ADD TRANSCRIPT EXTRACT?
+In Vignette 1B, Toby's work adding 21 levels to his game is noticed by Bertie who then asks Toby, _"Can you show me how you add more levels onto yours?"_ The full exchange shows an example of the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nasrin and Harper add levels to their games. Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nasrin in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
 
 
 Turnign to evolution of patterns, the concept of a safe zone in the game of Pearl and Clive arrived as a direct result of adding many _moving enemies_ in a way that it became essential for players to quickly identify and use 'safe zones' where enemies did not reach. This novel is concept, became used frequently in the playtesting of that game and that of others.
+
+
+
+Once concepts like safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, either from documentation, home gaming knowledge or genuine innovation,  it became available for propagation for take up by other participants.
+
+
+
+As explore previously in Ch.5, to prioritise participant engagement, I avoid a principles-first instruction approach (either to the whole group or to individuals). The use of documentation followed just in time principles or was not needed as participants engaged in the kind of peer learning described in this section.
 
 The data shows other examples of organic emergence of novel GDPs and related design concepts  beyond those offered in the menu of supporting documentation. Tehillah's concept of a level that eschews challenge and offers only rewards (see Vignette 2 and table above) emerged through playful experimentation. While this idea was  experimental and novel for the child and was not included in the scope of presented patterns, the idea exists in popular platform games (see Flicky and Super Mario Brs). ANY COMMENT?
 
@@ -723,11 +736,7 @@ In contrast other participants created extremely challenging or impossible game 
 DEVELOP THIS OR MOVE
 They seem to take pleasure from ignoring concepts of what should be done to maintain game balance and from the sense of shock from their current audience her parent. Going against this convention is a type of playful destruction in this context. The process mirrors play theory concept of playing against the game or dark play [@sutton-smith_ambiguity_2001].
 
-Once concepts like safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, either from documentation, home gaming knowledge or genuine innovation,  it became available for propagation for take up by other participants.
-
-In Vignette 1B, Toby's work adding 21 levels to his game is noticed by Bertie who then asks Toby, _"Can you show me how you add more levels onto yours?"_ The full exchange shows an example of the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nasrin and Harper add levels to their games. Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nasrin in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
-
-As explore previously in Ch.5, to prioritise participant engagement, I avoid a principles-first instruction approach (either to the whole group or to individuals). The use of documentation followed just in time principles or was not needed as participants engaged in the kind of peer learning described in this section. This preference for peer learning became a part of the emerging culture of the game making sessions.
+The preferences shown by some for peer learning and convention breaking became a part of the emerging culture of the game making sessions.
 
 #### GDPs as components of emerging repertoires in an evolving idioculture
 
@@ -831,34 +840,31 @@ To extend the concepts of designing for fluidity, it is of value to explore the 
 
 
 
-### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and expanded objects of activity - I THINK THIS IS PROBABLY BEST SKIPPED OR VERY BRIEF HERE.
+### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and expanded objects of activity -
 
+I THINK THIS IS PROBABLY BEST SKIPPED OR VERY BRIEF HERE.
 
 This section begins an interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts, with this analysis continuing in the following chapter.
 
-The uses of the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a more straightforward, triangular form of subject, tool, and object mediation (see Chapter 4 diagram).
+Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
 
-This chapter, along with the evolution of the learning design, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
+The examples in this chapter show GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources.   
 
-Elements of the innovation in the toolset of learning design, based on the emerging needs of the participants explored in this and the previous chapter, exemplify the development of new mediational strategies and tools.
+The findings expose complex activity which presents challenges in terms of graphical representation using 3GAT methods. The uses of GDPs within the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a triangular form of mediation involving subject, tool, and object mediation .
 
+![Figure 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_2.png){width=95%}
 
-At the larger scale, (see Fig.3.x) the games code and c can be seen as boundary objects for complex, and expanded interacting systems of activity.
+While this diagram helps represent a general picture of the pattern mediation it may be too general to be useful. In particular, there is complexity in terms of the role of GDPs here which act sometimes as mediational strategies and at other times as motivational components of the object at hand. In addition, it fails to communicate interplay with community level of activity and wider systems.
 
-In this research this exapanded object becomes increasingly complex.
-This incorporates diverse motivations, examples of which are above including but not limited to incorporting home intersts, supporting children, increasing coding skills, playful interaction,
+At the larger scale, (see Figure.5.x) the activity system of games code and process can be seen as a boundary objects. Additionally, each game instance, can also be interpreted as a boundary object for complex, and expanded interacting processes of activity. Take for example findings showing participant draw some of their home gaming knowledge of GDPs  in varied ways in the new setting including: goal formation, as a lingua franca in design processes, and to provide feedback in playtesting.
 
 Given the complexity of the expanded object and it would be unwieldy to try to represent in a 3GAT diagram form. As Engestrom noted in discussing challenges of representing new generations of AT, you can't keep adding triangles.
 
-NOW MAKE A LINK TO THE PROCESS OF THE NEXT CHAPTER.
+Instead the next chapter draws on x to represent some of this movement.
 
+This chapter has also addressed this complexity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. This section concludes with a fuller table. The right column lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
 
-GDPs are used in diverse ways as mediational tools to support those aims.
-The examples in this chapter show the importance of GDPs as a lingua franca, as a mediational strategy to facilitate these kinds of flexible, responsive collaboration.
-
-SOMEHOW REFERENCE TABLE ABOVE IN RELATION TO THE DIVERSE MOTIVATIONS / MEDIATION STRATEGIES IN ILLUSTRATION BELOW.
-
-<!-- ![Illustration 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_1.png){width=95%} -->
+INSERT FULL TABLE HERE
 
 
 
@@ -866,12 +872,10 @@ SOMEHOW REFERENCE TABLE ABOVE IN RELATION TO THE DIVERSE MOTIVATIONS / MEDIATION
 
 On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies.
 
-
 On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience.
 
 The observations of this chapter show the diversity and flexibility of uses of GDP as an mediational tool.
 The next chapter builds on this to propose the potential of GDPs as a relatable navigational framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
-
 
 The findings identified a complex object with a diversity of motivation which pose challenges in communicating in simple terms in terms of what characteristics we are designing learning environments to develop. The candidates of proximal flow and computational fluency were explored in relation to existing research and gaps were identified in there coverage of the importance of learning agency and identify formation.
 
