--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -41,13 +41,15 @@ title: 5. Exploration of the Formative Learning Design Process
                 -   [Use of side missions to encourage varied creative
                     practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [**Comparing to UMC, Microworlds & constructionist design
-            principles**](#comparing-to-umc-microworlds-constructionist-design-principles)
-        -   [**the potentially awesome impact of lifting the lid on
-            authentic
-            technologies**](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
-        -   [GDP as the germ cell of this
-            research](#gdp-as-the-germ-cell-of-this-research)
+        -   [Comparing to UMC, Microworlds & constructionist design
+            principles](#comparing-to-umc-microworlds-constructionist-design-principles)
+        -   [Authenticity Discussion](#authenticity-discussion)
+        -   [The position of GDPs in Activity Systems as the germ cell
+            of this
+            research](#the-position-of-gdps-in-activity-systems-as-the-germ-cell-of-this-research)
+        -   [Outlining the key stages of GDP use in the structural
+            learning
+            design.](#outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design.)
         -   [Summary and link to next
             chapter/s](#summary-and-link-to-next-chapters)
     -   [Parking Lot](#parking-lot)
