--- a/_posts/thesis_chapters/tocs/2025-3-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-5-Design.md_toc.md
@@ -29,11 +29,9 @@
                 -   [Use of side missions to encourage varied creative
                     practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [**Comparing to UMC, Microworlds & constructionist design
-            principles**](#comparing-to-umc-microworlds-constructionist-design-principles)
-        -   [**the potentially awesome impact of lifting the lid on
-            authentic
-            technologies**](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
+        -   [Comparing to UMC, Microworlds & constructionist design
+            principles](#comparing-to-umc-microworlds-constructionist-design-principles)
+        -   [Authenticity Discussion](#authenticity-discussion)
         -   [The position of GDPs in Activity Systems as the germ cell
             of this
             research](#the-position-of-gdps-in-activity-systems-as-the-germ-cell-of-this-research)
