--- a/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
@@ -30,16 +30,18 @@
             interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
         -   [Evolution and propagation of GDPs
             concepts](#evolution-and-propagation-of-gdps-concepts)
-            -   [Emergent social and cultural activities in evolving
-                idioculture](#emergent-social-and-cultural-activities-in-evolving-idioculture)
+            -   [GDPs as components of emerging repertoires in an
+                evolving
+                idioculture](#gdps-as-components-of-emerging-repertoires-in-an-evolving-idioculture)
     -   [Discussion](#discussion)
-        -   [Addressing the use of GDPs in relation to theoretical
-            understandings of processes of mediation and expanded
-            objects of
-            activity](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity)
         -   [Expanded object in terms of motivation - fluency towards
             agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
-        -   [Link section](#link-section)
+        -   [Link section - MERGE THIS WITH THE
+            ABOVE.](#link-section---merge-this-with-the-above.)
+        -   [Addressing the use of GDPs in relation to theoretical
+            understandings of processes of mediation and expanded
+            objects of activity
+            -](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity--)
     -   [Conclusion](#conclusion)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
