--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -18,6 +18,7 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
     -   [Introduction](#introduction)
     -   [The role of GDPs in the personal appropriation of concepts and
         processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
+        -   [On learning map.](#on-learning-map.)
         -   [The interrelationship of GDPs and the development of
             technical
             processes](#the-interrelationship-of-gdps-and-the-development-of-technical-processes)
@@ -39,17 +40,20 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
         -   [GDPs can facilitate the use of wider funds of knowledge and
             interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
-        -   [Evolution and propagation of GDPs concepts during
-            playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
-            -   [Emergent social and cultural activities in evolving
-                idioculture](#emergent-social-and-cultural-activities-in-evolving-idioculture)
+        -   [Evolution and propagation of GDPs
+            concepts](#evolution-and-propagation-of-gdps-concepts)
+            -   [GDPs as components of emerging repertoires in an
+                evolving
+                idioculture](#gdps-as-components-of-emerging-repertoires-in-an-evolving-idioculture)
     -   [Discussion](#discussion)
-        -   [Addressing the use of GDPs in relation to theoretical
-            understandings of processes of mediation and expanded
-            objects of
-            activity](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity)
         -   [Expanded object in terms of motivation - fluency towards
             agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
+        -   [Link section - MERGE THIS WITH THE
+            ABOVE.](#link-section---merge-this-with-the-above.)
+        -   [Addressing the use of GDPs in relation to theoretical
+            understandings of processes of mediation and expanded
+            objects of activity
+            -](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity--)
     -   [Conclusion](#conclusion)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
